WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257247
Schedule a rendering update directly instead of going via GraphicsLayerUpdater
https://bugs.webkit.org/show_bug.cgi?id=257247
Summary
Schedule a rendering update directly instead of going via GraphicsLayerUpdater
Matt Woodrow
Reported
2023-05-23 19:21:00 PDT
GraphicsLayerUpdater just waits for displayDidRefresh, and then calls back into RenderLayerCompositor to schedule a rendering update. I think we can just schedule the rendering update directly, for the same outcome.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-23 19:21:23 PDT
<
rdar://problem/109751273
>
Matt Woodrow
Comment 2
2023-05-23 19:23:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14283
EWS
Comment 3
2023-05-24 15:38:02 PDT
Committed
264488@main
(f06fb535234a): <
https://commits.webkit.org/264488@main
> Reviewed commits have been landed. Closing PR #14283 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug