Schedule a rendering update directly instead of going via GraphicsLayerUpdater https://bugs.webkit.org/show_bug.cgi?id=257247 <rdar://problem/109751273>

Reviewed by Simon Fraser.

GraphicsLayerUpdater just waits for displayDidRefresh, and then calls back into RenderLayerCompositor to schedule a rendering update.

I think we can just schedule the rendering update directly, for the same outcome.

* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::windowScreenDidChange):
* Source/WebCore/platform/graphics/GraphicsLayerClient.h:
* Source/WebCore/platform/graphics/GraphicsLayerUpdater.cpp: Removed.
* Source/WebCore/platform/graphics/GraphicsLayerUpdater.h: Removed.
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::RenderLayerCompositor):
(WebCore::RenderLayerCompositor::~RenderLayerCompositor):
(WebCore::RenderLayerCompositor::notifyFlushBeforeDisplayRefresh):
(WebCore::RenderLayerCompositor::destroyRootLayer):
(WebCore::RenderLayerCompositor::flushLayersSoon): Deleted.
(WebCore::RenderLayerCompositor::displayRefreshMonitorFactory): Deleted.
(WebCore::RenderLayerCompositor::windowScreenDidChange): Deleted.
* Source/WebCore/rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/264488@main